[FIX] Problems with date time fields position on small screen size

--- a/static/articles/css/articles.css
+++ b/static/articles/css/articles.css
@@ -53,3 +53,17 @@
 #my-name {
     border-bottom: solid 2px #FFC93C;
 }
+
+@media (max-width: 800px) {
+    .article-item {
+        flex-wrap: wrap;
+    }
+
+    .info li {
+        display: inline-flex;
+    }
+
+    .info, .info ul {
+        padding: 0px;
+    }
+}
